# MaterialX

./: .appveyor.yml  .travis.yml  CMakeLists.txt  OPTIONS.md  README.md
documents/: CMakeLists.txt
documents/DeveloperGuide/: ShaderGeneration.md  Viewer.md
documents/Libraries/sxpbrlib/: sxpbrlib_defs.mtlx  sxpbrlib_ng.mtlx  sxpbrlib_sx-glsl_impl.mtlx  sxpbrlib_sx-osl_impl.mtlx
libraries/bxdf/: usd.mtlx
libraries/pbrlib/genglsl/: mx_conductor_brdf.glsl  mx_dielectric_brdf.glsl  mx_dielectric_btdf.glsl  mx_diffuse_btdf.glsl  mx_generalized_schlick_brdf.glsl  mx_multiply_edf_color.glsl  mx_multiply_edf_float.glsl  mx_sheen_brdf.glsl  mx_subsurface_brdf.glsl  mx_uniform_edf.glsl
libraries/pbrlib/genglsl/lib/: mx_bsdfs.glsl  mx_environment_fis.glsl
libraries/stdlib/genglsl/lib/: mx_hsv.glsl
resources/Materials/Examples/UsdPreviewSurface/: usd_preview_surface_brass_tiled.mtlx  usd_preview_surface_default.mtlx  usd_preview_surface_glass.mtlx  usd_preview_surface_gold.mtlx  usd_preview_surface_plastic.mtlx
source/MaterialXContrib/: CMakeLists.txt  OGSXMLFragmentWrapper.cpp  OGSXMLFragmentWrapper.h
source/MaterialXContrib/MaterialXNode/: CMakeLists.txt  CreateMaterialXNodeCmd.cpp  CreateMaterialXNodeCmd.h  MaterialXNode.cpp  MaterialXNode.h  MaterialXNodeOverride.cpp  MaterialXNodeOverride.h  MaterialXTextureOverride.cpp  MaterialXTextureOverride.h  Plugin.cpp  Plugin.h  Util.cpp  Util.h  Utils.cpp  Utils.h
source/MaterialXContrib/MaterialXNode/resources/: tiledImage.xml  tiledimage.mtlx
source/MaterialXCore/: TypeDesc.cpp  Types.h  Unit.cpp  UnitConverter.cpp  UnitConverter.h
source/MaterialXFormat/: Util.cpp  Util.h  XmlIo.cpp  XmlIo.h
source/MaterialXGenGlsl/: GlslShaderGenerator.cpp  GlslSyntax.cpp
source/MaterialXGenOgsFx/: OgsFxShaderGenerator.cpp  OgsFxShaderGenerator.h
source/MaterialXGenOsl/: OslShaderGenerator.cpp  OslSyntax.cpp
source/MaterialXGenShader/: CMakeLists.txt  ColorManagementSystem.h  GenOptions.h  HwShaderGenerator.cpp  ShaderGenerator.h  ShaderGraph.cpp  ShaderGraph.h  ShaderNode.cpp  ShaderNode.h  ShaderStage.cpp  Syntax.cpp  UnitSystem.h  Util.cpp  Util.h
source/MaterialXGenShader/Nodes/: ConvertNode.cpp  SourceCodeNode.cpp
source/MaterialXRender/: CMakeLists.txt  Mesh.cpp  Util.cpp
source/MaterialXRenderOsl/: OslRenderer.cpp
source/MaterialXRuntime/: RtApi.h  RtFileIo.cpp
source/MaterialXShaderGen/ShaderGenerators/Glsl/: GlslShaderGenerator.cpp
source/MaterialXTest/: CMakeLists.txt  GenArnold.cpp  GenGlsl.cpp  GenOgsfx.cpp  GenOsl.cpp  GenShader.cpp  GenShaderUtil.cpp  RenderUtil.cpp  ShaderGen.cpp  ShaderValid.cpp  XmlIo.cpp
source/MaterialXTest/MaterialXCore/: Units.cpp
source/MaterialXTest/MaterialXFormat/: CMakeLists.txt
source/MaterialXTest/MaterialXGenArnold/: CMakeLists.txt
source/MaterialXTest/MaterialXGenGlsl/: CMakeLists.txt  GenGlsl.cpp
source/MaterialXTest/MaterialXGenOgsFx/: CMakeLists.txt  GenOgsFx.cpp
source/MaterialXTest/MaterialXGenOgsXml/: CMakeLists.txt
source/MaterialXTest/MaterialXGenOsl/: CMakeLists.txt  GenOsl.cpp
source/MaterialXTest/MaterialXGenShader/: CMakeLists.txt  GenShader.cpp  GenShaderUtil.cpp  GenShaderUtil.h
source/MaterialXTest/MaterialXRender/: CMakeLists.txt  RenderUtil.cpp
source/MaterialXTest/MaterialXRenderArnold/: CMakeLists.txt
source/MaterialXTest/MaterialXRenderGlsl/: CMakeLists.txt  RenderGlsl.cpp
source/MaterialXTest/MaterialXRenderOgsFx/: CMakeLists.txt
source/MaterialXTest/MaterialXRenderOsl/: CMakeLists.txt  GenReference.cpp  RenderOsl.cpp
source/MaterialXTest/MaterialXRuntime/: CMakeLists.txt  Runtime.cpp
source/MaterialXView/: Material.cpp  Viewer.cpp  Viewer.h
source/PyMaterialX/PyMaterialXGenShader/: PyTypeDesc.cpp  PyUnitConverter.cpp
